force-app/main/default/objects/kzScoring__c/kzScoring__c.object-meta.xml
<CustomObject>
    <description>Registro de configuración principal del sistema de scoring. Solo 1 registro MAIN activo esperado.</description>
    <label>Scoring</label>
    <nameField>
        <label>Nombre de Scoring</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>