force-app/main/default/objects/kzScoring__c/fields/kzActive__c.field-meta.xml
<CustomField>
    <fullName>kzActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Marcar para que este Scoring sea usado por el motor de cálculo. Solo un Scoring activo debe existir en producción.</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>