force-app/main/default/objects/kzScoring__c/fields/kzDescription__c.field-meta.xml
<CustomField>
    <fullName>kzDescription__c</fullName>
    <description>Descripción del alcance de esta configuración de scoring.</description>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>