force-app/main/default/objects/kzScoring__c/fields/kzPMPTotalOverride__c.field-meta.xml
<CustomField>
    <fullName>kzPMPTotalOverride__c</fullName>
    <inlineHelpText>Si se define, el handler usará este PMP total en vez de sumar los PMP por ítem. Dejar vacío para usar suma de items.</inlineHelpText>
    <label>PMP Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>