force-app/main/default/objects/kzScoring__c/fields/kzVersion__c.field-meta.xml
<CustomField>
    <fullName>kzVersion__c</fullName>
    <description>Versión / tag del esquema</description>
    <label>Versión</label>
    <length>125</length>
    <type>Text</type>
</CustomField>